<resources>

    <string name="app_name">CommonsLab</string>
    <string name="commons">Wikimedia Commons</string>

    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="create_an_account">Create an Account</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="field_required">This field is required</string>
    <string name="record">Record</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="comment">Comment</string>
    <string name="upload">Upload</string>
    <string name="retype_password">Retype Password</string>
    <string name="captcha">Captcha</string>

    <!--Transition name-->
    <string name="expandTransition">expandTransition</string>

    <!--SharedPreferences storage strings-->
    <string name="User_Credentials">org.wikimedia.commons.wikimedia.UserCredentials</string>
    <string name="User_Contributions">org.wikimedia.commons.wikimedia.UserContributions</string>
    <string name="Picture_of_the_day">Wikimedia Commons picture of the day</string>
    <string name="Media_of_the_day">Wikimedia Commons media of the day</string>
    <string name="email_error">Email is not correct</string>
    <string name="pod">Picture of the day</string>
    <string name="image_capture_request">CommonsLab needs the camera to capture images</string>
    <string name="image_audio_request">CommonsLab needs to access the mic to record audio</string>
    <string name="image_gallery_request">CommonsLab needs to access your images</string>
    <string name="deny_permission">Deny</string>
    <string name="allow_permission">Allow</string>


    <!--Video capture-->
    <string name="stop">Stop</string>
    <string name="permission_request">CommonsLab needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="picture_of_the_day">Picture of the day</string>
    <string name="media_of_the_day">Media of the day</string>
    <string name="commonslab">CommonsLab</string>
    <string name="logout">Logout</string>
    <string name="cant_record_in_suported_format">Your device can\'t record in the supported format</string>
    <string name="failed_capturing_image">Failed capturing image</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="no_camera_on_device">No camera on device</string>
    <string name="allow_app_to_capture_images">To share in Commons \nallow this app to capture images</string>
    <string name="allow_app_to_record_videos">To share in Commons \nallow this app to record videos</string>
    <string name="allow_app_to_record_audio">To share in Commons \nallow this app to record audio</string>
    <string name="allow_app_to_access_gallery">To share in Commons \nallow this app to access gallery images</string>
    <string name="an_error_accourred">An error occurred</string>
    <string name="the_decoder_failed_to_playback_the_file">The decoder failed to playback the file</string>
    <string name="device_has_no_microphone">Device has no microphone</string>
    <string name="welcome">Welcome Back :)</string>
    <string name="incorrect_username_password">Incorrect username or password</string>
    <string name="cant_play_this_media">Can\'t play this media.  Not supported format</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password_to_short">Password to short \nMinimal 6 characters needed</string>
    <string name="account_created_successfully">Account created successfully \nPlease confirm your account</string>
    <string name="user_session_deleted">User session deleted \nPlease re-login to upload media</string>
    <string name="set_the_media_title">Set the media title</string>
    <string name="thank_tou_for_sharing">Thank you for sharing in Commons</string>

</resources>
