<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    tools:context="org.wikimedia.commons.wikimedia.Fragments.AudioRegisterFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/record_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:title="@string/app_name"
        app:layout_collapseMode="parallax"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <Button
        android:id="@+id/record_button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@color/record_btn_color"
        android:text="@string/record"
        android:textAllCaps="false"
        android:textColor="@color/white" />
    <!--android:visibility="gone"-->


    <LinearLayout
        android:id="@+id/record_layout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/record_cancel"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/record_done"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="0.5"
            android:background="@color/record_btn_color"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

    <include layout="@layout/record_audio_animation" />
</RelativeLayout>
