<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_form_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/create_account_layout"
        android:foregroundGravity="center"
        android:gravity="center">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/login_form_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:foregroundGravity="fill_vertical"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">


                <ImageView
                    android:id="@+id/login_drawable"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="60dp"
                    android:contentDescription="@string/commons"
                    android:src="@drawable/logo_png" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/emailContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">

                    <org.wikimedia.commons.wikimedia.Utils.CustomViews.CustomEditText
                        android:id="@+id/login_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_line"
                        android:ems="10"
                        android:hint="@string/username"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:paddingBottom="4dp"
                        android:textColor="@color/white_opacity"
                        android:textColorHint="@color/white_opacity" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white_opacity">

                    <org.wikimedia.commons.wikimedia.Utils.CustomViews.CustomEditText
                        android:id="@+id/password_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_line"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingBottom="4dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white_opacity" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_button_shape"
                        android:text="@string/action_sign_in"
                        android:textAllCaps="false"
                        android:textColor="@color/white_opacity"
                        android:textSize="16sp"
                        />


                    <!--<TextView-->
                    <!--android:id="@+id/login_forgot_password"-->
                    <!--style="?android:textAppearanceSmall"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center_horizontal"-->
                    <!--android:layout_marginTop="30dp"-->
                    <!--android:text="@string/forgot_password"-->
                    <!--android:textColor="@color/white_opacity" />-->
                </LinearLayout>
            </LinearLayout>


        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/create_account_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@color/green_opacity"
        android:gravity="bottom">

        <Button
            android:id="@+id/to_register_screen"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:text="@string/create_an_account"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white_opacity"
            android:textSize="18sp" />
    </LinearLayout>


</RelativeLayout>
