<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="left"
        android:layout_marginTop="12dp"
        android:padding="4dp"
        android:scaleType="fitStart"
        android:src="@drawable/ic_keyboard_back"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <LinearLayout
        android:id="@+id/linear_form_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/create_account_layout"
        android:layout_below="@id/register_toolbar"
        android:foregroundGravity="center_vertical"
        android:gravity="fill_vertical">

        <ScrollView
            android:id="@+id/register_scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/register_usernameContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:foregroundGravity="center">

                    <EditText
                        android:id="@+id/register_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_line"
                        android:ems="10"
                        android:hint="@string/username"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:paddingBottom="4dp"
                        android:popupBackground="#ffffff"
                        android:textColor="@color/white_opacity"
                        android:textColorHint="@color/white_opacity" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/register_passwordContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/register_usernameContainer"
                    android:layout_marginBottom="20dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white_opacity">

                    <EditText
                        android:id="@+id/password_register"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_line"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingBottom="4dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white_opacity" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/register_retypePasswordContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/register_passwordContainer"
                    android:layout_marginBottom="20dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white_opacity">

                    <EditText
                        android:id="@+id/password_register_retype"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_line"
                        android:hint="@string/retype_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingBottom="4dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white_opacity" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/register_emailContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/register_retypePasswordContainer"
                    android:layout_marginBottom="20dp">

                    <EditText
                        android:id="@+id/register_email"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_line"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingBottom="4dp"
                        android:popupBackground="#ffffff"
                        android:textColor="@color/white_opacity"
                        android:textColorHint="@color/white_opacity" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/register_captchaImageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/register_emailContainer"
                    android:layout_marginBottom="20dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/register_captchaContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/register_captchaImageView"
                    android:layout_marginBottom="40dp">

                    <EditText
                        android:id="@+id/register_captchaWord"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_line"
                        android:hint="@string/captcha"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingBottom="4dp"
                        android:popupBackground="#ffffff"
                        android:textColor="@color/white_opacity"
                        android:textColorHint="@color/white_opacity" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/create_account_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@color/green_opacity"
        android:gravity="bottom">


        <Button
            android:id="@+id/register_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white_opacity"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>
